Storing Images on cloud via configuring Cloudinary | Importing Map through openstreetmap (geocoding) | Connecting to CloudDB (MongoAtlas) | Storing sessions on cloud DB

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,18 +1,36 @@
+
+<style>
+    .f-info-socials a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.2rem;
+  margin-right: 6px;
+}
+
+</style>
 <footer>
     <div class="f-info border-top">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
-            <i class="fa-brands fa-linkedin"></i>
-        </div>
+    <div class="f-info-socials">
+      <a href="https://www.instagram.com/atharva__7504/" target="_blank">
+        <i class="fa-brands fa-square-instagram"></i>
+      </a>
+    
+      <a href="https://www.facebook.com/khabale.khabale.3" target="_blank">
+        <i class="fa-brands fa-square-facebook"></i>
+      </a>
+    
+      <a href="https://www.linkedin.com/in/atharva-khabale/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+    </div>
+
 
         <div class="f-info-brand">
-            &copy; Rentora Private Limited
+            &copy; <%= new Date().getFullYear() %> &nbsp; Rentora Private Limited
         </div>
 
         <div class="f-info-links">
-            <a href="#">Privacy </a>
-            <a href="#"> Terms</a>
+            <p>Made with <i class="fa-solid fa-heart"></i> by Atharva</p>
         </div>
 
     </div>
